Adding Docker configuration.

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "author": {
     "name": "Dylan Baker"
   },
-  "name": "VOS-Synchronization",
+  "name": "vos-synchronization",
   "description": "VOS Synchronization Service.",
   "keywords": [
     "VOS",
